Add VkVideoPlaybackNegativeTest.java + test VkVideoPlaybackPositiveTest.java improvement